scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/unsat/AssrtCoreTest20.scr
module bad.extensions.assrtcore.safety.unsat.AssrtCoreTest20;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B, role C)
{
	choice at A
	{
		1() from A to B;  @"False"
		1() from B to C;  @"False"  // assrt-prog because previous False makes implies this
	}	
	or
	{
		2() from A to B;
		2() from B to C;
	}
}
//*/
